--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                                 Associate Researcher<br />
                                 School of Computer Science and Technology<br />
                                 Shandong University<br />
-                                <span style="font-weight: normal;">Email: qiong dot zn AT</span><span style="font-weight: normal;"> gmail.com</span>
+                                <span style="font-weight: normal;">Email: qiong dot zn AT</span><span style="font-weight: normal;"> sdu.edu.cn</span>
                             </div>
                         </td>
                         <td valign="bottom" style="text-align: left; width: 180;"><br /></td>
