--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <pubname>Qiong Zeng</pubname>, Yinqiao Wang,
                     <a href="http://sourcedb.cnic.cas.cn/yw/people/201106/t20110613_3286827.html">Jian Zhang</a>,  Wenting Zhang,
                     <a href="http://irc.cs.sdu.edu.cn/~chtu/">Changhe Tu</a>,
-                    <a href="https://www.kaust.edu.sa/en/study/faculty/ivan-viola">Ivan Voila</a>,
+                    <a href="https://www.kaust.edu.sa/en/study/faculty/ivan-viola">Ivan Viola</a>,
                     , <a href="http://yunhaiwang.org">Yunhai Wang</a>.
                     <strong>Data-Driven Colormap Optimization for 2D Scalar Field Visualization</strong>.
                     <em>accepted by IEEE VIS Short Papers, 2019</em>. 
