--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div id="content">
             <h1></h1>
 
-            <img class="imageleft" src="images/zq.jpg" height="300" alt="" />
+            <img class="imageleft" src="images/qiongzn.png" height="300" alt="" />
             <p style="text-align:justify; text-justify:inter-ideograph;">
                 Dr. Qiong Zeng is currently an Associate Researcher (<a href="files/CV_Qiong.pdf">CV</a>) in <a href="http://irc.cs.sdu.edu.cn">Interdisciplinary Research Center </a> (IRC) at
                 <a href="http://www.cs.sdu.edu.cn/">School of Computer Science and Technology</a>,
@@ -107,7 +107,7 @@
                     <a href="https://www.kaust.edu.sa/en/study/faculty/ivan-viola">Ivan Viola</a>,
                     , <a href="http://yunhaiwang.org">Yunhai Wang</a>.
                     <strong>Data-Driven Colormap Optimization for 2D Scalar Field Visualization</strong>.
-                    <em>accepted by IEEE VIS Short Papers, 2019</em>. 
+                    <em>IEEE VIS Short Papers, 2019</em>. 
                 </p>
                 <p>
                     [<a href = "files/coloropt.pdf">pdf], [<a href="http://www.yunhaiwang.net/SciVis2019/colorProject/index.html"">Project Page</a>]
