--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div id="content">
             <h1></h1>
 
-            <img class="imageleft" src="images/qiongzn.png" height="300" alt="" />
+            <img class="imageleft" src="images/qiongzn.jpg" height="300" alt="" />
             <p style="text-align:justify; text-justify:inter-ideograph;">
                 Dr. Qiong Zeng is currently an Associate Researcher (<a href="files/CV_Qiong.pdf">CV</a>) in <a href="http://irc.cs.sdu.edu.cn">Interdisciplinary Research Center </a> (IRC) at
                 <a href="http://www.cs.sdu.edu.cn/">School of Computer Science and Technology</a>,
