--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <img class="imageleft" src="images/qiongzn.jpg" height="300" alt="" />
             <p style="text-align:justify; text-justify:inter-ideograph;">
-                Dr. Qiong Zeng is currently an Associate Researcher (<a href="files/CV_Qiong.pdf">CV</a>) in <a href="http://irc.cs.sdu.edu.cn">Interdisciplinary Research Center </a> (IRC) at
+                Dr. Qiong Zeng is currently an Associate Researcher in <a href="http://irc.cs.sdu.edu.cn">Interdisciplinary Research Center </a> (IRC) at
                 <a href="http://www.cs.sdu.edu.cn/">School of Computer Science and Technology</a>,
                 <a href="http://www.sdu.edu.cn/">Shandong University</a>. 
 			</p>
