--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <em>IEEE Tansactions on Visualization and Computer Graphics, to appear</em>. 
                 </p>
                 <p>
-                    [<a href = "files/coloropt-tvcg.pdf">pdf], [<a href="http://www.yunhaiwang.net/tvcg2022/coloropt/"">Project Page</a>]
+                    [<a href = "files/coloropt-final.pdf">pdf], [<a href="http://www.yunhaiwang.net/tvcg2022/coloropt/"">Project Page</a>]
                 </p>
 				</div>
 			    
