--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
                     <img class="imageright" src="images/proj/coloropt.png" width="450" />
                     <pubname>Qiong Zeng</pubname>, Yinqiao Wang,
                     <a href="http://www.cnic.cas.cn/sourcedb_cnic_cas/zw/zjrc/xwgg/202107/t20210702_6125793.html">Jian Zhang</a>,  Wenting Zhang,
-                    <a href="http://irc.cs.sdu.edu.cn/~chtu/">Changhe Tu</a>,
+                    <a href="http://irc.cs.sdu.edu.cn/~chtu/index.html">Changhe Tu</a>,
                     <a href="https://www.kaust.edu.sa/en/study/faculty/ivan-viola">Ivan Viola</a>,
-                    , <a href="http://yunhaiwang.org">Yunhai Wang</a>.
+                    , <a href="http://yunhaiwang.net">Yunhai Wang</a>.
                     <strong>Data-Driven Colormap Optimization for 2D Scalar Field Visualization</strong>.
                     <em>IEEE VIS Short Papers, 2019</em>. 
                 </p>
