--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 	 <div id="content">
                 <h1 class="headline">
-                    <strong>Publications</strong>
+                    <strong>Selected Publications</strong>
                 </h1>
 				<p>
                     <img class="imageright" src="images/proj/CT.jpg" width="450" />
