--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		    <a href="http://www.iapcm.ac.cn/teaching_detail_106.html">Yi Cao</a>,
                     <a href="http://irc.cs.sdu.edu.cn/~chtu/index.html">Changhe Tu</a>,
                     <a href="https://www.kaust.edu.sa/en/study/faculty/ivan-viola">Ivan Viola</a>,
-                    , <a href="http://yunhaiwang.net">Yunhai Wang</a>.
+                    <a href="http://yunhaiwang.net">Yunhai Wang</a>.
                     <strong>Data-Driven Colormap Adjustment for Exploring Spatial Variations in 2D Scalar Field</strong>.
                     <em>IEEE Tansactions on Visualization and Computer Graphics, to appear</em>. 
                 </p>
