--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <a href="https://www.kaust.edu.sa/en/study/faculty/ivan-viola">Ivan Viola</a>,
                     <a href="http://yunhaiwang.net">Yunhai Wang</a>.
                     <strong>Data-Driven Colormap Adjustment for Exploring Spatial Variations in 2D Scalar Field</strong>.
-                    <em>IEEE Tansactions on Visualization and Computer Graphics, to appear</em>. 
+                    <em>Accepted by IEEE Tansactions on Visualization and Computer Graphics</em>. 
                 </p>
                 <p>
                     [<a href = "files/coloropt-final.pdf">pdf], [<a href="http://www.yunhaiwang.net/tvcg2022/coloropt/"">Project Page</a>]
