--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <em>Accepted by IEEE Tansactions on Visualization and Computer Graphics</em>. 
                 </p>
                 <p>
-                    [<a href = "files/coloropt-final.pdf">pdf], [<a href="http://www.yunhaiwang.net/tvcg2022/coloropt/"">Project Page</a>]
+                    [<a href = "files/coloropt-final.pdf">paper</a>], [<a href="http://www.yunhaiwang.net/tvcg2022/coloropt/">Project Page</a>]
                 </p>
 				</div>
 			    
@@ -150,7 +150,7 @@
                     <em>IEEE VIS Short Papers, 2019</em>. 
                 </p>
                 <p>
-                    [<a href = "files/coloropt.pdf">pdf], [<a href="http://www.yunhaiwang.net/SciVis2019/colorProject/index.html"">Project Page</a>]
+                    [<a href = "files/coloropt.pdf">paper</a>], [<a href="http://www.yunhaiwang.net/SciVis2019/colorProject/index.html">Project Page</a>]
                 </p>
 				</div>
 				
@@ -169,7 +169,7 @@
                     <strong>Visual Analysis of Haze Evolution and Correlation in Beijing</strong>. <em>Journal of Visualization (ChinaVis'18), 2019.</em>
                 </p>
                 <p>
-                    [<a href="files/haze.pdf">pdf</a>]
+                    [<a href="files/haze.pdf">paper</a>]
 
                 </p>
             </div>
@@ -188,7 +188,7 @@
                     <em>Visual Informatics, 2018 </em>. ( <sup>*</sup> Joint first authors)
                 </p>
                 <p>
-                    [<a href="files/embed.pdf">pdf</a>], [<a href="http://irc.cs.sdu.edu.cn/multiEmbed/">Project Page</a>]
+                    [<a href="files/embed.pdf">paper</a>], [<a href="http://irc.cs.sdu.edu.cn/multiEmbed/">Project Page</a>]
                 </p>
             </div>
 			
@@ -205,7 +205,7 @@
                     <strong>Emotion Control of Unstructured Dance Movements</strong>. <em>ACM SIGGRAPH/ Eurographics Symposium on Computer Animation, SCA'17. Eurographics Association, 2017.</em>
                 </p>
                 <p>
-                    [<a href="files/danceemotion.pdf">pdf</a>], [<a href="http://www.andreasaristidou.com/DanceWemotion.html">project page</a>]
+                    [<a href="files/danceemotion.pdf">paper</a>], [<a href="http://www.andreasaristidou.com/DanceWemotion.html">project page</a>]
 
                 </p>
             </div>
@@ -223,7 +223,7 @@
                     <em>Computer Graphics Forum, 34(2), 2015 (Proc.Eurographics 2015)</em>.
                 </p>
                 <p>
-                    [<a href="files/fakestereo-eg-fixed.pdf">pdf</a>], [<a href="http://irc.cs.sdu.edu.cn/StereoProject/">project page</a>]
+                    [<a href="files/fakestereo.pdf">paper</a>], [<a href="http://irc.cs.sdu.edu.cn/StereoProject/">project page</a>]
                 </p>
             </div>
 
@@ -242,7 +242,7 @@
                     <em>Graphical Models, 76(3), pp140-151, 2014</em>.
                 </p>
                 <p>
-                    [<a href="files/BasRelief.pdf">pdf</a>]
+                    [<a href="files/BasRelief.pdf">paper</a>]
                 </p>
             </div>
 
@@ -284,6 +284,9 @@
                     automatic color computing schemes with perceptual constraints; (3)
                     interaction-aware adaptive color design, building adaptive color computing schemes
                     based on interactive constraints in multiscalar and time-series data. 
+                </p>
+                <p>
+                    [<a href="https://colorcomputing.com/"">Color Design Survey Browser</a>, <a href="files/colorsurvey.pdf">paper</a>]
                 </p>
             </div>
 
