--- a/index.html
+++ b/index.html
@@ -115,11 +115,34 @@
                 <p>sd01332210 <a href="https://sdubigdatacourse.github.io/">Practices on Big Data Analysis</a> </p>
                 <p>sd99410090-751  Innovative Interdisciplinary Experiments</p>
             </div>
+			
+			
 
-	 <div id="content">
+<div id="content">
                 <h1 class="headline"><a name="Publications" style="text-decoration:none" >
                     <strong>Selected Publications</strong></a>
                 </h1>
+								
+				<p>
+                    <img class="imageright" src="images/proj/dancepro.png" width="450" />
+                    Qiu Zhou<sup>#</sup>,
+				  <a href="https://manyili12345.github.io/ ">Manyi Li</a><sup>#</sup>,
+                  <a href="https://qiongzn.github.io/">Qiong Zeng</a><sup>*</sup>,
+				  <a href="http://www.andreasaristidou.com/">Andreas Aristidou</a>,
+				  Xiaojing Zhang,
+                  Lin Chen,
+                  <a href="http://irc.cs.sdu.edu.cn/~chtu/index.html">Changhe Tu</a><sup>*</sup>.
+                    <strong>Let's All Dance: Enhancing Amateur Dance Motions</strong>.
+                    <em>Computational Visual Media 2022, to appear</em>. 
+                </p>
+				<p>
+                    [<a href = "files/dancepro.pdf">paper</a>], [<a href="http://irc.cs.sdu.edu.cn/dancepro/index.html">Project Page</a>]
+                </p>
+                <p>
+				</div>
+				
+			<div id="content">
+	
 				<p>
                     <img class="imageright" src="images/proj/CT.jpg" width="450" />
                     <pubname>Qiong Zeng</pubname>, Yongwei Zhao, Yinqiao Wang,
@@ -129,7 +152,7 @@
                     <a href="https://www.kaust.edu.sa/en/study/faculty/ivan-viola">Ivan Viola</a>,
                     <a href="http://yunhaiwang.net">Yunhai Wang</a>.
                     <strong>Data-Driven Colormap Adjustment for Exploring Spatial Variations in 2D Scalar Field</strong>.
-                    <em>Accepted by IEEE Tansactions on Visualization and Computer Graphics</em>. 
+                    <em>IEEE Tansactions on Visualization and Computer Graphics 2022, to appear</em>. 
                 </p>
                 <p>
                     [<a href = "files/coloropt-final.pdf">paper</a>], [<a href="http://www.yunhaiwang.net/tvcg2022/coloropt/">Project Page</a>]
@@ -286,7 +309,7 @@
                     based on interactive constraints in multiscalar and time-series data. 
                 </p>
                 <p>
-                    [<a href="https://colorcomputing.com/"">Color Design Survey Browser</a>, <a href="files/colorsurvey.pdf">paper</a>]
+                    [<a href="https://colorcomputing.com/"">Color Design Survey Browser</a>, <a href="files/colorsurvey.pdf">paper</a> (Chinese)]
                 </p>
             </div>
 
