--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <em>Computational Visual Media 2022, to appear</em>. 
                 </p>
 				<p>
-                    [<a href = "files/dancepro.pdf">paper</a>], [<a href="http://irc.cs.sdu.edu.cn/dancepro/index.html">Project Page</a>]
+                    [<a href = "files/dancepro.pdf">paper</a>], [<a href="http://irc.cs.sdu.edu.cn/dancepro/index.html">Project Page</a>], [<a href="https://github.com/zhouqiu/DanceProfessionalization">Codes</a>]
                 </p>
                 <p>
 				</div>
@@ -155,7 +155,7 @@
                     <em>IEEE Tansactions on Visualization and Computer Graphics 2022, to appear</em>. 
                 </p>
                 <p>
-                    [<a href = "files/coloropt-final.pdf">paper</a>], [<a href="http://www.yunhaiwang.net/tvcg2022/coloropt/">Project Page</a>]
+                    [<a href = "files/coloropt-final.pdf">paper</a>], [<a href="http://www.yunhaiwang.net/tvcg2022/coloropt/">Project Page</a>], [<a href="https://github.com/rucy1996/Data-Driven-Colormap-Adjustment-for-Exploring-Spatial-Variations-in-Scalar-Fields">Codes</a>]
                 </p>
 				</div>
 			    
