--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <td valign="baseline" style="vertical-align: middle;">
                             <h1 style="text-align: left; font-size: 54px" class="auto-style16"><small>Qiong Zeng</small></h1>
                             <div style="text-align: left; font-size: 20px" class="auto-style8">
-                                Associate Researcher<br />
+                                Associate Professor<br />
                                 School of Computer Science and Technology<br />
                                 Shandong University<br />
                                 <span style="font-weight: normal;">Email: qiong dot zn AT</span><span style="font-weight: normal;"> sdu.edu.cn</span>
