--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
             </p>
              <p style="text-align:justify; text-justify:inter-ideograph;">
 				My research focuses on the fundamental theories and practical applications of AI in scientific domains. 
-                Specifically, I am interested in data compression and neural representations, high-quality scientific rendering, and adaptive color computing.
+                Specifically, I am interested in data compression and neural representations, high-quality scientific rendering, and color computing.
             </p>
             <p>
-                I am actively seeking self-motivated Master's and Ph.D. students to collaborate on research projects such as AIGC-driven scientific visualization, high-fidelity scientific visualization, and color perception for scientific visualization. 
+                I am actively seeking self-motivated Master's and Ph.D. students to collaborate on research projects such as color perception, AIGC-driven scientific visualization, and volume rendering. 
                 Students with Bachelor's degrees in Computer Science or related fields are encouraged to apply.
              </p>
     
