--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <a href="http://www.cnic.cas.cn/sourcedb_cnic_cas/zw/zjrc/xwgg/202107/t20210702_6125793.html">Jian Zhang</a>,  Wenting Zhang,
                     <a href="http://irc.cs.sdu.edu.cn/~chtu/index.html">Changhe Tu</a>,
                     <a href="https://www.kaust.edu.sa/en/study/faculty/ivan-viola">Ivan Viola</a>,
-                    , <a href="http://yunhaiwang.net">Yunhai Wang</a>.
+                    <a href="http://yunhaiwang.net">Yunhai Wang</a>.
                     <strong>Data-Driven Colormap Optimization for 2D Scalar Field Visualization</strong>.
                     <em>IEEE VIS Short Papers, 2019</em>. 
                 </p>
@@ -237,7 +237,7 @@
                     <a href="http://irc.cs.sdu.edu.cn/~wenzheng/">Wenzheng Chen</a><sup>*</sup>, Zhuo Han,  Mingyi Shi,
                     <a href="http://www.yanirk.com/">Yanir Kleiman</a>,
                     <a href="http://www.math.tau.ac.il/~dcor/">Daniel Cohen-Or</a>,
-                    , <a href="http://www.cs.sdu.edu.cn/~baoquan/">Baoquan Chen</a>,
+                    <a href="http://www.cs.sdu.edu.cn/~baoquan/">Baoquan Chen</a>,
                     <a href="http://web.stanford.edu/~yangyan/">Yangyan Li</a>.
                     <strong>Group Optimization for Multi-attribute Visual Embedding</strong>.
                     <em>Visual Informatics, 2018 </em>. ( <sup>*</sup> Joint first authors)
