--- a/index.html
+++ b/index.html
@@ -109,6 +109,29 @@
                 <h1 class="headline"><a name="Publications" style="text-decoration:none" >
                     <strong>Selected Publications</strong></a>
                 </h1>
+		<p>
+                    <img class="imageright" src="images/proj/colorup" width="450" />
+                    Hongxu Liu, Xinyu Chen, Haoyang Zheng, <a href="https://manyili12345.github.io/ ">Manyi Li</a>, Zhenfan Liu, 
+		   <a href="https://www.fmyang.com/">Fumeng Yang</a>, <a href="http://yunhaiwang.net">Yunhai Wang</a>, 
+			<a href="http://irc.cs.sdu.edu.cn/~chtu/index.html">Changhe Tu</a>, <a href="https://qiongzn.github.io/">Qiong Zeng</a><sup>*</sup>.
+                    <strong>Self-Supervised Continuous Colormap Recovery from a 2D Scalar Field Visualization without a Legend</strong>.
+                    <em>IEEE VIS 2025</em>. 
+                </p>
+                <p>
+                    [<a href="https://hongxuliu0227.github.io/coloritup/">Project Page</a>]
+                </p>
+		<p>
+                    <img class="imageright" src="images/proj/dd" width="450" />
+                    Yiming Shao, Chengming Liu, Zhiyuan Meng, Shufan Qian, 
+		    <a href="https://scholar.google.com/citations?user=buQktfIAAAAJ&hl=en">Peng Jiang</a>,
+	 	    <a href="http://yunhaiwang.net">Yunhai Wang</a>, 
+		    <a href="https://qiongzn.github.io/">Qiong Zeng</a><sup>*</sup>.
+                    <strong>2024 IEEE Scientific Visualization Contest Winner: PlumeViz: Interactive Exploration for Multi-Facet Features of Hydrothermal Plumes in Sonar Images</strong>.
+                    <em>IEEE Computer Graphics and Applications 2025</em>. 
+                </p>
+                <p>
+                    [<a href="https://www.computer.org/csdl/magazine/cg/5555/01/10921679/251t9k69Psk">Preprint Paper</a>]
+                </p>
                 <p>
                     <img class="imageright" src="images/proj/depthstudy.png" width="450" />
                     Zhiyuan Meng, Yunpeng Yang,
