--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     [<a href="https://hongxuliu0227.github.io/coloritup/">Project Page</a>]
                 </p>
 		<p>
-                    <img class="imageright" src="images/proj/dd" width="450" />
+                    <img class="imageright" src="images/proj/plumeviz" width="450" />
                     Yiming Shao, Chengming Liu, Zhiyuan Meng, Shufan Qian, 
 		    <a href="https://scholar.google.com/citations?user=buQktfIAAAAJ&hl=en">Peng Jiang</a>,
 	 	    <a href="http://yunhaiwang.net">Yunhai Wang</a>, 
