--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <em>IEEE Computer Graphics and Applications 2025</em>. 
                 </p>
                 <p>
-                    [<a href="https://www.computer.org/csdl/magazine/cg/5555/01/10921679/251t9k69Psk">Preprint Paper</a>]
+                    [<a href="https://www.computer.org/csdl/magazine/cg/5555/01/10921679/251t9k69Psk">Preprint Paper</a>],  [<a href = "https://syming123.github.io/plumeviz/">Project Page</a>], 
                 </p>
                 <p>
                     <img class="imageright" src="images/proj/depthstudy.png" width="450" />
