--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <strong>Selected Publications</strong></a>
                 </h1>
 		<p>
-                    <img class="imageright" src="images/proj/colorup" width="450" />
+                    <img class="imageright" src="images/proj/colorup.png" width="450" />
                     Hongxu Liu, Xinyu Chen, Haoyang Zheng, <a href="https://manyili12345.github.io/ ">Manyi Li</a>, Zhenfan Liu, 
 		   <a href="https://www.fmyang.com/">Fumeng Yang</a>, <a href="http://yunhaiwang.net">Yunhai Wang</a>, 
 			<a href="http://irc.cs.sdu.edu.cn/~chtu/index.html">Changhe Tu</a>, <a href="https://qiongzn.github.io/">Qiong Zeng</a><sup>*</sup>.
@@ -121,7 +121,7 @@
                     [<a href="https://hongxuliu0227.github.io/coloritup/">Project Page</a>]
                 </p>
 		<p>
-                    <img class="imageright" src="images/proj/plumeviz" width="450" />
+                    <img class="imageright" src="images/proj/plumeviz.png" width="450" />
                     Yiming Shao, Chengming Liu, Zhiyuan Meng, Shufan Qian, 
 		    <a href="https://scholar.google.com/citations?user=buQktfIAAAAJ&hl=en">Peng Jiang</a>,
 	 	    <a href="http://yunhaiwang.net">Yunhai Wang</a>, 
