--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
                 <p>sd01332210 <a href="https://sdubigdatacourse.github.io/">Practices on Big Data Analysis</a> </p>
                 <p> sd01332120		Introduction to Artificial Intelligence</p>
                 <p> sd01331980      Visualization Techniques </p>
-
             </div>
 			
 			
@@ -120,6 +119,9 @@
                 <p>
                     [<a href="https://hongxuliu0227.github.io/coloritup/">Project Page</a>]
                 </p>
+	</div>
+
+<div id="content">
 		<p>
                     <img class="imageright" src="images/proj/plumeviz.png" width="450" />
                     Yiming Shao, Chengming Liu, Zhiyuan Meng, Shufan Qian, 
@@ -132,6 +134,9 @@
                 <p>
                     [<a href="https://www.computer.org/csdl/magazine/cg/5555/01/10921679/251t9k69Psk">Preprint Paper</a>],  [<a href = "https://syming123.github.io/plumeviz/">Project Page</a>], 
                 </p>
+	</div>
+
+<div id="content">
                 <p>
                     <img class="imageright" src="images/proj/depthstudy.png" width="450" />
                     Zhiyuan Meng, Yunpeng Yang,
