--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <em>IEEE Computer Graphics and Applications 2025</em>. 
                 </p>
                 <p>
-                    [<a href="https://www.computer.org/csdl/magazine/cg/5555/01/10921679/251t9k69Psk">Preprint Paper</a>],  [<a href = "https://syming123.github.io/plumeviz/">Project Page</a>], 
+                    [<a href="https://www.computer.org/csdl/magazine/cg/5555/01/10921679/251t9k69Psk">Preprint Paper</a>],  [<a href = "https://syming123.github.io/plumeviz/">Project Page</a>]
                 </p>
 	</div>
 
