--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </h1>
                 <p>sd01332210 <a href="https://sdubigdatacourse.github.io/">Practices on Big Data Analysis</a> </p>
                 <p> sd01332120		Introduction to Artificial Intelligence</p>
-                <p> sd01331980      Visualization Techniques </p>
+                <p> sd01331980 <a href="https://sduvis.github.io/">      Visualization Techniques </a></p>
             </div>
 			
 			
@@ -384,3 +384,4 @@
         
 </body>
 </html>
+
